add two line return

--- a/views/amongus.handlebars
+++ b/views/amongus.handlebars
@@ -16,7 +16,7 @@
         <ol>
             <li>Ouvrez Steam, allez dans votre bibliotèque et cliquez sur Among Us</li>
             <li>    
-                Cliquez sur l'engrenage à droite afin d'accéder aux propriétés
+                Cliquez sur l'engrenage à droite afin d'accéder aux propriétés<br/>
                 <img src="./images/amongus/proprietes.png" alt="Propriétés" />
             </li>
             <li>Dans le menu de droite cliquez sur Bêtas</li>
@@ -58,7 +58,7 @@
             <li>Téléchargez le fichier winhttp.dll en cliquant <strong><a href="/winhttp">Ici</a></strong></li>
             <li>Ouvrez Steam, allez dans votre bibliotèque et cliquez sur Among Us</li>
             <li>    
-                Cliquez sur l'engrenage à droite afin d'accéder aux propriétés
+                Cliquez sur l'engrenage à droite afin d'accéder aux propriétés<br/>
                 <img src="./images/amongus/proprietes.png" alt="Propriétés" />
             </li>
             <li>Dans le menu de droite cliquez sur Fichier Locaux puis sur le bouton Parcourir</li>
@@ -111,7 +111,7 @@
         <br/>
     {{else}}
         <h1>This page is not available in english for now.</h1>
-        <br/><br/><br/>
+        <br/>
         <h2>Please check it in french by changing the website language in the top right corner.</h2>
     {{/ifEquals}}
 </div>
