add link to my discord profile

--- a/views/amongus.handlebars
+++ b/views/amongus.handlebars
@@ -41,7 +41,8 @@
             </li>
             <li>
                 Dans le champ IP Address rentrez l'adresse IP du serveur privé Impostor sur lequel vous souhaitez vous connecter<br/>
-                <i>(Vous pouvez me contacter sur Discord pour avoir accès à mon serveur privé)</i>
+                <i>(Vous pouvez me contacter sur Discord pour avoir accès à mon serveur privé : 
+                <a href="https://discordapp.com/users/112632359207108608/" target="_blank">Floliroy#0001</a>)</i>
             </li>
             <li>
                 Sauvegardez l'adresse IP à l'aide du bouton Save, vous pouvez maintenant fermer Impostor.exe
@@ -101,7 +102,8 @@
             <li>Vous pouvez maintenant cliquez sur Appliquer et Valider</li>
             <li>
                 Enfin connectez vous au serveur Mumble avec vos camarades de jeu<br/>
-                <i>(Vous pouvez me contacter sur Discord pour avoir accès à mon serveur privé)</i>
+                <i>(Vous pouvez me contacter sur Discord pour avoir accès à mon serveur privé : 
+                <a href="https://discordapp.com/users/112632359207108608/" target="_blank">Floliroy#0001</a>)</i>
             </li>
         </ol>
         <br/>
