--- a/views/amongus.handlebars
+++ b/views/amongus.handlebars
@@ -5,12 +5,85 @@
 
         <h3>Sommaire</h3>
         <ul>
+            <li><a href="#links">Lien rapides</a></li>
             <li><a href="#beta">Mode béta</a></li>
             <li><a href="#private">Serveur privé</a></li>
             <li><a href="#mumble">Chat de proximité (Mumble)</a></li>
             <li><a href="#crewlink">Chat de proximité (CrewLink)</a></li>
         </ul>
         <br/>
+
+        <h3 id="links">Liens rapides</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th width="20%">
+                        Impostor<br/>
+                        <i>(Serveur Privé)</i>
+                    </th>
+                    <th width="20%">
+                        Mumble<br/>
+                        <i>(winhttp.dll)</i>
+                    </th>
+                    <th width="20%">
+                        Mumble<br/>
+                        <i>(Logiciel)</i>
+                    </th>
+                    <th width="20%">
+                        Better CrewLink<br/>
+                        <i>(Logiciel)</i>
+                    </th>
+                    <th width="20%">
+                        Sheriff<br/>
+                        <i>(Plugin)</i>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        Direct :<br>
+                        <strong><a href="https://github.com/Impostor/Impostor/releases/download/v1.1.0/Impostor-Client-win-x64.zip"></a>Télécharger</a></strong> 
+                    </td>
+                    <td>
+                        Direct :<br>
+                        <strong><a href="/winhttp"></a>Télécharger</a></strong> 
+                    </td>
+                    <td>
+                        Direct :<br>
+                        <strong><a href="https://www.mumble.info/downloads/windows-64"></a>Télécharger</a></strong> 
+                    </td>
+                    <td>
+                        Direct :<br>
+                        <strong><a href="https://github.com/OhMyGuus/BetterCrewLink/releases/download/v2.2.3/Better-CrewLink-Setup-2.2.3.exe"></a>Télécharger</a></strong> 
+                    </td>
+                    <td>
+                        Direct :<br>
+                        <strong><a href="/sheriff"></a>Télécharger</a></strong> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Versions :<br>
+                        <strong><a href="https://github.com/Impostor/Impostor/releases/tag/v1.1.0" target="_blank"></a>GitHub</a></strong>
+                    </td>
+                    <td>
+                        <strong>/</strong>
+                    </td>
+                    <td>
+                        Versions :<br>
+                        <strong><a href="https://www.mumble.info/downloads/" target="_blank"></a>Mumble</a></strong>
+                    </td>
+                    <td>
+                        Versions :<br>
+                        <strong><a href="https://github.com/OhMyGuus/BetterCrewLink/releases" target="_blank"></a>GitHub</a></strong>
+                    </td>
+                    <td>
+                        <strong>/</strong>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <h3 id="beta">Mode béta</h3>
         <ol>
