missed some anchors

--- a/views/amongus.handlebars
+++ b/views/amongus.handlebars
@@ -14,7 +14,7 @@
         <br/>
 
         <h3 id="links">Liens rapides</h3>
-        <table>
+        <table id="CV">
             <thead>
                 <tr>
                     <th width="20%">
@@ -43,40 +43,40 @@
                 <tr>
                     <td>
                         Direct :<br>
-                        <strong><a href="https://github.com/Impostor/Impostor/releases/download/v1.1.0/Impostor-Client-win-x64.zip"></a>Télécharger</a></strong> 
+                        <strong><a href="https://github.com/Impostor/Impostor/releases/download/v1.1.0/Impostor-Client-win-x64.zip">Télécharger</a></strong> 
                     </td>
                     <td>
                         Direct :<br>
-                        <strong><a href="/winhttp"></a>Télécharger</a></strong> 
+                        <strong><a href="/winhttp">Télécharger</a></strong> 
                     </td>
                     <td>
                         Direct :<br>
-                        <strong><a href="https://www.mumble.info/downloads/windows-64"></a>Télécharger</a></strong> 
+                        <strong><a href="https://www.mumble.info/downloads/windows-64">Télécharger</a></strong> 
                     </td>
                     <td>
                         Direct :<br>
-                        <strong><a href="https://github.com/OhMyGuus/BetterCrewLink/releases/download/v2.2.3/Better-CrewLink-Setup-2.2.3.exe"></a>Télécharger</a></strong> 
+                        <strong><a href="https://github.com/OhMyGuus/BetterCrewLink/releases/download/v2.2.3/Better-CrewLink-Setup-2.2.3.exe">Télécharger</a></strong> 
                     </td>
                     <td>
                         Direct :<br>
-                        <strong><a href="/sheriff"></a>Télécharger</a></strong> 
+                        <strong><a href="/sheriff">Télécharger</a></strong> 
                     </td>
                 </tr>
                 <tr>
                     <td>
                         Versions :<br>
-                        <strong><a href="https://github.com/Impostor/Impostor/releases/tag/v1.1.0" target="_blank"></a>GitHub</a></strong>
+                        <strong><a href="https://github.com/Impostor/Impostor/releases/tag/v1.1.0" target="_blank">GitHub</a></strong>
                     </td>
                     <td>
                         <strong>/</strong>
                     </td>
                     <td>
                         Versions :<br>
-                        <strong><a href="https://www.mumble.info/downloads/" target="_blank"></a>Mumble</a></strong>
+                        <strong><a href="https://www.mumble.info/downloads/" target="_blank">Mumble</a></strong>
                     </td>
                     <td>
                         Versions :<br>
-                        <strong><a href="https://github.com/OhMyGuus/BetterCrewLink/releases" target="_blank"></a>GitHub</a></strong>
+                        <strong><a href="https://github.com/OhMyGuus/BetterCrewLink/releases" target="_blank">GitHub</a></strong>
                     </td>
                     <td>
                         <strong>/</strong>
