add 404 handling + some new css

--- a/views/layouts/index.handlebars
+++ b/views/layouts/index.handlebars
@@ -5,7 +5,7 @@
     <title>FloLeeroy J.</title>
 
     <link rel="icon" type="image/png" href="./logo.png" />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/index.css" />
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="./dynamic.js"></script>
@@ -14,7 +14,9 @@
     {{> header}}
     <br/>
 
-    {{{body}}}
+    <div id="main">
+        {{{body}}}
+    </div>
     
     <br/>
     {{> footer}}
