--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -1,4 +1,5 @@
-<table id="CV">
+<link rel="stylesheet" type="text/css" href="./styles/resume.css" />
+<table>
     <thead>
         <tr>
             <th>
@@ -325,25 +326,3 @@
         </tr></table></td></tr>
     </tbody>
 </table>
-
-<div class="popup" id="more-diplomas">
-    TODO More Diplomas
-</div>
-<div class="popup" id="more-experiences">
-    TODO More Eperiences
-</div>
-<div class="popup" id="more-projects">
-    TODO More Projects
-</div>
-<div class="popup" id="more-skills">
-    TODO More Skills
-</div>
-<div class="popup" id="more-softwares">
-    TODO More Softwares
-</div>
-<div class="popup" id="more-technologies">
-    TODO More Technologies
-</div>
-<div class="popup" id="more-hobbies">
-    TODO More Hobbies
-</div>
