--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,18 +7,20 @@
 </h2>
 <br/>
 
-<a href="/resume"><div>
-    <h3>Portfolio</h3>
+<div>
+    <h3><a href="/resume">Portfolio</a></h3>
+
     {{#ifEquals lang "fr"}}
         Mon propre Portfolio / Curriculum Vitae <i>(en cours de dev ...)</i>
     {{else}}
         My own Portfolio / Curriculum Vitae <i>(in development ...)</i>
     {{/ifEquals}}
-</div></a>
+</div>
 <br/>
 
-<a href="/amongus"><div>
-    <h3>Among Us</h3>
+<div>
+    <h3><a href="/amongus">Among Us</a></h3>
+
     {{#ifEquals lang "fr"}}
         Plusieurs guides sur Among Us :<br/><br/>
         Installation de la version béta<br/>
@@ -27,5 +29,5 @@
     {{else}}
         Different guides related to Among Us <i>(only available in french for now)</i>
     {{/ifEquals}}
-</div></a>
+</div>
 <br/>
