--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -8,6 +8,7 @@
 footer{
     border-top: 2px solid slategrey;
     position: fixed;
+    z-index: 1;
     width: 100%;
     left: 0;
     bottom: 0;
