add version as a variable from package.json

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -2,7 +2,7 @@
 <footer>
     <span class="left">
         &nbsp;&nbsp;&nbsp;
-        v1.0.0
+        {{version}}
     </span>
 
     {{#ifEquals lang "fr"}}
