--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -2,7 +2,7 @@
 <footer>
     <span class="left">
         &nbsp;&nbsp;&nbsp;
-        {{version}}
+        v{{version}}
     </span>
 
     {{#ifEquals lang "fr"}}
