update among us page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,10 +22,7 @@
     <h3><a href="/amongus">Among Us</a></h3>
 
     {{#ifEquals lang "fr"}}
-        Plusieurs guides sur Among Us :<br/><br/>
-        Installation de la version béta<br/>
-        Connexion à un serveur privé<br/>
-        Installation du chat de proximité (version Mumble)<br/>
+        Plusieurs guides sur Among Us. Ainsi que des liens rapides de téléchargement.<br/>
     {{else}}
         Different guides related to Among Us <i>(only available in french for now)</i>
     {{/ifEquals}}
