--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
 <br/>
 
 <div>
-    <h3><a href="/resume">Portfolio</a></h3>
+    <h3 class="link"><a href="/resume">Portfolio</a></h3>
 
     {{#ifEquals lang "fr"}}
         Mon propre Portfolio / Curriculum Vitae <i>(en cours de dev ...)</i>
@@ -19,7 +19,7 @@
 <br/>
 
 <div>
-    <h3><a href="/amongus">Among Us</a></h3>
+    <h3 class="link"><a href="/amongus">Among Us</a></h3>
 
     {{#ifEquals lang "fr"}}
         Plusieurs guides sur Among Us. Ainsi que des liens rapides de téléchargement.<br/>
