--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -17,6 +17,7 @@ body.whiteTheme{
 div#main{
     width: 80%;
     max-width: 1152px;
+    min-width: 768px;
     border: 2px solid slategrey;
     margin-left: auto;
     margin-right: auto;
