--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -10,15 +10,15 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="./dynamic.js"></script>
 </head>
-<body class="{{theme}}Theme">
-    {{> header}}
+<body class="<%=theme%>Theme">
+    <%-include("header")%>
     <br/>
 
     <div id="main">
-        {{{body}}}
+        <%-include(`../pages/${body}`)%>
     </div>
     
     <br/>
-    {{> footer}}
+    <%-include("footer")%>
 </body>
 </html>
