add some page animation

--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -14,7 +14,7 @@
     <%-include("header")%>
     <br/>
 
-    <div id="main">
+    <div id="main" class="animateIn">
         <%-include(`../pages/${body}`)%>
     </div>
     
