--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -13,6 +13,16 @@ body.whiteTheme{
     color: #36393f;
 }
 
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 /** Main */
 div#main{
     width: 80%;
@@ -30,6 +40,17 @@ div#main{
 }
 .whiteTheme div#main{
     background-color: whitesmoke;
+}
+
+.animateIn {
+    -webkit-animation: fadeIn .25s ease-in;
+    animation: fadeIn .25s ease-in;
+}
+
+.animateOut {
+    -webkit-transition: opacity .25s;
+    transition: opacity .25s;
+    opacity: 0;
 }
 
 #main img{
@@ -53,7 +74,6 @@ h3{
     padding: 0.3em 0.5em 0.3em 0.5em;
     margin: 0.5em 0 0.5em 0;
     position: relative;
-    transition: border-left 0.5s ease-in-out;
 }
 
 h3.link::after{
