--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -14,13 +14,24 @@ body.whiteTheme{
 }
 
 @-webkit-keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from { 
+        opacity: 0;
+        filter: blur(0);
+    }
+    to { 
+        filter: blur(5px);
+    }
 }
 
 @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from { 
+        opacity: 0; 
+        filter: blur(0);
+    }
+    to { 
+        opacity: 1; 
+        filter: blur(5px);
+    }
 }
 
 /** Main */
