--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -8,17 +8,20 @@
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="./dynamic.js"></script>
+    <script src="./scripts/jquery.smoothState.min.js"></script>
+    <script type="text/javascript" src="./scripts/dynamic.js"></script>
 </head>
 <body class="<%=theme%>Theme">
-    <%-include("header")%>
-    <br/>
+    <div id="smoothState" class="animate">
+        <%-include("header")%>
+        <br/>
 
-    <div id="main" class="animateIn">
-        <%-include(`../pages/${body}`)%>
+        <div id="main" class="animate fadeInUp">
+            <%-include(`../pages/${body}`)%>
+        </div>
+        
+        <br/>
+        <%-include("footer")%>
     </div>
-    
-    <br/>
-    <%-include("footer")%>
 </body>
 </html>
