--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="./logo.png" />
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="./scripts/jquery.min.js"></script>
     <script src="./scripts/jquery.smoothState.min.js"></script>
     <script type="text/javascript" src="./scripts/dynamic.js"></script>
 </head>
