--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -6,7 +6,6 @@
 }
 
 footer{
-    border-top: 2px solid slategrey;
     position: fixed;
     z-index: 1;
     width: 100%;
@@ -14,6 +13,7 @@ footer{
     bottom: 0;
     padding: 1.5em 0 1em 0;
     text-align: center;
+    box-shadow: 0px -2px 5px 2px rgba(112, 128, 144, 0.5);
 }
 
 footer img{
