--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,7 @@ header{
     left: 0;
     top: 0;
     padding: 1.5em 0 1.5em 0;
-    border-bottom: 2px solid slategrey;
+    box-shadow: 0px 2px 5px 2px rgba(112, 128, 144, 0.5);
 }
 .blackTheme header{
     background-color: #2f3136;
