--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -59,7 +59,7 @@ div#main{
     width: 80%;
     max-width: 1152px;
     min-width: 768px;
-    border: 2px solid slategrey;
+    box-shadow: 0px -2px 5px 2px rgba(112, 128, 144, 0.5), 0px 2px 5px 2px rgba(112, 128, 144, 0.5);
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
