--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -42,16 +42,17 @@ body.whiteTheme{
     bottom: 0;
     width: 100vw;
     height: 200vh;
+    background-size: 100vw 200vh;
     pointer-events: none;
     z-index: 1;
     visibility: hidden;
     opacity: 0;
 }
 .blackTheme .loader{
-    background: url("../images/transitionBlack.png");
+    background-image: url("../images/transitionBlack.png");
 }
 .whiteTheme .loader{
-    background: url("../images/transitionWhite.png");
+    background-image: url("../images/transitionWhite.png");
 }
 
 /** Main */
