--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -146,6 +146,7 @@ table.bordered{
 /** Other */
 .fullCenter th, .fullCenter td{
     vertical-align: center;
+    text-align: center;
 }
 
 .serverPwd{
@@ -168,4 +169,53 @@ span.right{
 }
 span.left{
     float: left;
+}
+
+/** Fieldset */
+fieldset{
+    background-color: rgb(77, 77, 77);
+    border-radius: 15px;
+    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    margin:  10px 5px 10px 5px;
+}
+
+fieldset legend{
+    border: 4px solid crimson;
+    border-radius: 15px;
+    padding: 0.3em 0.5em 0.3em 0.5em;
+    margin: 0.5em 0 0.5em 0;
+    position: relative;
+    background-color: inherit;
+    font-weight: bolder;
+}
+
+fieldset textarea{
+    width: 100%;
+    height: 50px;
+}
+fieldset input[type=text]{
+    width: 100%;
+}
+
+fieldset input[type=button]{
+    margin: 5px;
+    background-color: inherit;
+    border-color: crimson;
+    border-radius: 15px;
+    color: inherit;
+    padding: 5px;
+    font-size: bold;
+    transition-duration: 0.4s;
+}
+fieldset input[type=button]:hover {
+    background-color: crimson;
+}
+
+fieldset table{
+    margin: 0;
+    width: 400px;
+}
+fieldset th, fieldset td{
+    padding: 0;
 }
