--- a/views/pages/printTftPlayers.ejs
+++ b/views/pages/printTftPlayers.ejs
@@ -3,44 +3,79 @@
 <form>
     <fieldset>
         <legend>Cooldown TFT Cup</legend>
-        <div>
-            <label for="cooldownId">ID du Tournoi :</label>
-            <input type="text" name="cooldownId" id="cooldownId" onkeydown="removeOtherForm(this)">
-        </div>
-        <div>
-            <label for="cooldownLink">Lien du Tournoi :</label>
-            <input type="text" name="cooldownLink" id="cooldownLink" onkeydown="removeOtherForm(this)">
-        </div>
-        <div>
-            <input type="button" value="Rechercher">
-        </div>
+        <table>
+            <tr>
+                <td>
+                    <label for="cooldownId">ID du Tournoi :</label>
+                </td>
+                <td>
+                    <input type="text" name="cooldownId" id="cooldownId" onkeydown="removeOtherForm(this)">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="cooldownLink">Lien du Tournoi :</label>
+                </td>
+                <td>
+                    <input type="text" name="cooldownLink" id="cooldownLink" onkeydown="removeOtherForm(this)">
+                </td>
+            </tr>
+            <tr class="fullCenter">
+                <td colspan="2">
+                    <input type="button" value="Rechercher">
+                </td>
+            </tr>
+        </table>
     </fieldset>
     <fieldset>
         <legend>PCS Trophy TFT</legend>
-        <div>
-            <label for="pcsId">ID du Tournoi :</label>
-            <input type="text" name="pcsId" id="pcsId" onkeydown="removeOtherForm(this)">
-        </div>
-        <div>
-            <label for="pcsLink">Lien du Tournoi :</label>
-            <input type="text" name="pcsLink" id="pcsLink" onkeydown="removeOtherForm(this)">
-        </div>
-        <div>
-            <input type="button" value="Rechercher">
-        </div>
+        <table>
+            <tr>
+                <td>
+                    <label for="pcsId">ID du Tournoi :</label>
+                </td>
+                <td>
+                    <input type="text" name="pcsId" id="pcsId" onkeydown="removeOtherForm(this)">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="pcsLink">Lien du Tournoi :</label>
+                </td>
+                <td>
+                    <input type="text" name="pcsLink" id="pcsLink" onkeydown="removeOtherForm(this)">
+                </td>
+            </tr>
+            <tr class="fullCenter">
+                <td colspan="2">
+                    <input type="button" value="Rechercher">
+                </td>
+            </tr>
+        </table>
     </fieldset>
     <fieldset>
         <legend>Liste de Joueurs</legend>
-        <div>
-            <label for="namesList">Noms des Joueurs :</label><br/>
-            <textarea name="namesList" id="namesList" onkeydown="removeOtherFormTextArea()"></textarea>
-        </div>
-        <div>
-            <label for="separator">Séparateur :</label>
-            <input type="text" name="separator" id="separator" onkeydown="removeOtherForm(this)">
-        </div>
-        <div>
-            <input type="button" value="Rechercher">
-        </div>
+        <table>
+            <tr>
+                <td colspan="2">
+                    <label for="namesList">Noms des Joueurs :</label><br/>
+                    <textarea name="namesList" id="namesList" onkeydown="removeOtherFormTextArea()"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="separator">Séparateur :</label>
+                </td>
+                <td>
+                    <input type="text" name="separator" id="separator" onkeydown="removeOtherForm(this)">
+                </td>
+            </tr>
+            <tr class="fullCenter">
+                <td colspan="2">
+                    <input type="button" value="Rechercher">
+                </td>
+            </tr>
+        </table>
     </fieldset>
 </form>
